infra/traefik/traefik-forward-auth/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-forward-auth
  namespace: traefik
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels: {}
  strategy:
    type: Recreate
  template:
    metadata:
      labels: {}
    spec:
      containers:
        - name: traefik-forward-auth
          image: mesosphere/traefik-forward-auth:3.1.0
          ports:
            - containerPort: 4181
          volumeMounts:
            - name: rules
              mountPath: /rules
          startupProbe:
            tcpSocket:
              port: 4181
            failureThreshold: 30
            periodSeconds: 5
            timeoutSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 4181
            failureThreshold: 2
            periodSeconds: 30
            timeoutSeconds: 50
          resources: {}
      volumes:
        - name: rules
          secret:
            secretName: traefik-forward-auth-rules
            items:
              - key: rules
                path: config.ini
      restartPolicy: Always
      automountServiceAccountToken: false
