infra/traefik/traefik-forward-auth/service.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: traefik-forward-auth
  namespace: traefik
spec:
  ports:
    - port: 4181
      targetPort: 4181
  type: ClusterIP
